5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1644_2445.log
== SUBMITION (2019-04-11 19:22:43) 
-- CODE:
escala = input()
v = float(input())

if(escala == "F"):
	print(v*1.8 + 32)
	
if(escala == "C"):
	print((v − 32)/1.8)
-- EXECUTION TIME:
0.142631
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    print((v \u2212 32)/1.8)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:22:52) 
-- CODE:
escala = input()
v = float(input())

if(escala == "C"):
	print(v*1.8 + 32)
	
if(escala == "F"):
	print((v − 32)/1.8)
-- EXECUTION TIME:
0.164041
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    print((v \u2212 32)/1.8)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:32:15) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0312991
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:32:18) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0360241
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:33:09) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0344229
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:33:54) 
-- CODE:
q = input(
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0316329
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:34:01) 
-- CODE:
q = input(0
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.034147
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:34:25) 
-- CODE:
q = input(0
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- ERROR:
File "XXXX", line 2
    t = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:34:57) 
-- CODE:
q = input(0
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- ERROR:
File "XXXX", line 2
    t = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:35:38) 
-- CODE:
q = input(0
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0339592
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:35:54) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.035702
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:35:57) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:36:22) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:37:45) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0377879
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:37:50) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:38:42) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c
-- EXECUTION TIME:
0.0412121
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:38:59) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0313861
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:39:19) 
-- CODE:
q = input()
t = float(input())
if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.0360169
-- ERROR:
Error response from daemon: Container 27eeb55358c5059b1cf0cc764b6235bd40c11fed7e96f61cf4fe8618ca558ad6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:42:06) 
-- CODE:
q = input()
t = float(input())
if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.032161
-- ERROR:
Error response from daemon: Container b0fa2e00e7ae2d35077340e422887c5035b5de555cfa11f0e34ad46da53389a6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 12:05:20) 
-- CODE:
q = input()
t = float(input())
if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.832602
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
